--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -61,6 +61,21 @@ md-toolbar.md-default-theme {
   z-index: 1002;
 }
 
+body {
+  background: transparent url("//www.library.uq.edu.au/_/sites/all/themes/uq/images/mylibrary_backgrd_duhig_4.jpg") no-repeat 50% 66px;
+}
+
+md-content {
+  margin:20px auto;
+  padding:20px;
+  width:100%;
+  max-width:960px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  background-color:#fff;
+}
+
+
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
