moment and gulp tests fixed

--- a/src/app/partials/example.html
+++ b/src/app/partials/example.html
@@ -1,7 +1,8 @@
 <div layout="vertical" layout-fill>
 
   <md-content>
-    Yo! Whatup?
+    Yo! Whatup?<br>
+    creation date: {{vm.creationDate}}
   </md-content>
 
 </div>
