--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,14 +5,14 @@
 // bower:scss
 // endbower
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 .material-icons {
-  font-family: 'Material Icons', sans-serif;
+  font-family: "Material Icons", sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px; /* Preferred icon size */
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -30,11 +30,11 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Support for IE. */
-  font-feature-settings: 'liga';
+  font-feature-settings: "liga";
 }
 
 html {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
 }
 
 uql-mega-menu {
@@ -44,11 +44,11 @@ uql-mega-menu {
 
 .hp {
   margin: 0 auto;
-  max-width:1140px;
-  padding:50px 0;
+  max-width: 1140px;
+  padding: 50px 0;
 }
 
-[layout=row] {
+[layout="row"] {
   flex-direction: row;
 }
 
@@ -61,21 +61,22 @@ md-toolbar.md-default-theme {
 }
 
 body {
-  height:100%;
-  width:100%;
-  background: transparent url("//www.library.uq.edu.au/_/sites/all/themes/uq/images/mylibrary_backgrd_duhig_4.jpg") no-repeat 50% 66px;
+  height: 100%;
+  width: 100%;
+  // background: transparent
+  //   url("https://www.library.uq.edu.au/_/sites/all/themes/uq/images/mylibrary_backgrd_duhig_4.jpg")
+  //   no-repeat 50% 66px;
 }
 
 md-content {
-  margin:20px auto;
-  padding:20px;
-  width:100%;
-  max-width:960px;
+  margin: 20px auto;
+  padding: 20px;
+  width: 100%;
+  max-width: 960px;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
-  background-color:#fff;
+  background-color: #fff;
 }
-
 
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
